equals and hashCode methods in the Medication class are correctly overridden to ensure proper comparison in assertions.